# orama-js-pool

./: Cargo.toml  README.md  build.rs  runtime.js  telemetry.ts  util.ts
.github/workflows/: ci.yml
benches/: bench.rs
examples/: openai.js  openai.rs  readme_async.rs  readme_async_stream.rs  readme_sync.rs  stream_console.rs  sum-stdin.rs
examples/open_ai_js_example/: package.json  tsconfig.json
examples/open_ai_js_example/src/: index.ts
open_ai_js_example/: pnpm-lock.yaml  vite.config.ts
src/: executor.rs  lib.rs  manager.rs  options.rs  orama_extension.rs  orama_js_runtime.rs  parameters.rs  permission.rs  pool.rs  runner.rs  runtime.rs  worker.rs
src/new/: manager.rs  mod.rs  options.rs  pool.rs  runtime.rs  worker.rs
src2/: lib.rs
