[package]
name = "orama-js-pool"
version = "0.4.0"
edition = "2021"
license = "AGPL-3.0"
description = "Create a pool of JavaScript engines to invoke JavaScript code concurrently."
keywords = ["concurrency", "virtualization", "javascript", "deno"]
categories = ["concurrency", "virtualization"]
authors = [
  "Tommaso Allevi <tomallevi@gmail.com>",
]
documentation = "https://docs.rs/orama-js-pool"
repository = "https://github.com/oramasearch/orama-js-pool"
homepage = "https://crates.io/crates/orama-js-pool"

exclude = [
  "open_ai_js_example/*",
  ".github/*",
]

[lib]
name         = "orama_js_pool"
# crate-type   = ["rlib", "cdylib"]

[dependencies]
deadpool = "0.12"
deno_console = "0.194.0"
deno_core = "0.340.0"
deno_crypto = "0.208.0"
deno_fetch = "0.218.0"
deno_io = "0.104.0"
deno_net = "0.186.0"
deno_permissions = "0.53.0"
deno_url = "0.194.0"
deno_web = "0.225.0"
deno_webidl = "0.194.0"
serde = "1"
serde_json = "1"
thiserror = "2.0.12"
tokio = { version = "1", features = ["time", "rt"] }
tracing = "0.1"
globset = "0.4"

[build-dependencies]
deno_console = "0.194.0"
deno_core = "0.340.0"
deno_crypto = "0.208.0"
deno_fetch = "0.218.0"
deno_io = "0.104.0"
deno_net = "0.186.0"
deno_permissions = "0.53.0"
deno_telemetry = "0.16.0"
deno_url = "0.194.0"
deno_web = "0.225.0"
deno_webidl = "0.194.0"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["time", "rt"] }
tracing = "0.1"
globset = "0.4"

[dev-dependencies]
axum = "0.8.4"
criterion = { version = "0.8", features = ["async_tokio"] }
serde = { version = "1", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[[bench]]
name = "bench"
harness = false
